adds sexy video

--- a/_posts/2018-10-01-wankel.markdown
+++ b/_posts/2018-10-01-wankel.markdown
@@ -10,3 +10,5 @@ categories: links
 [siri make this](https://www.youtube.com/watch?v=fPQYEub2fRE)
 
 [siri change my wikipedia entry to read "trendsetter"](https://melmagazine.com/why-the-viral-shower-orange-tastes-so-good-11fd2e663fe5)
+
+[siri it's sexytime](https://www.youtube.com/watch?v=cR_IEjo61Ds)
