--- a/_posts/2018-12-23-snowmas.md
+++ b/_posts/2018-12-23-snowmas.md
@@ -4,7 +4,10 @@ title: snowmas
 date: 2018-12-23
 ---
 
-<blockquote class="imgur-embed-pub" lang="en" data-id="GuFBdGX"><a href="//imgur.com/GuFBdGX"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+<video controls>
+  <source src="/images/leapard.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
 
 # [mittens through the ages martha _mittens through the ages_](https://digitaltmuseum.se/search/?aq=descname%3A%22Tumvante%22&o=0&n=224){:target="blank"}
 
